--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "server": "json-server --port 3001 --watch server/db.json",
     "seed": "node server/seed.js",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js"
+    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "dev": "npm-run-all -p build:dev server"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
@@ -31,6 +32,7 @@
     "html-webpack-plugin": "^3.2.0",
     "json-server": "0.14.2",
     "mini-css-extract-plugin": "^0.7.0",
+    "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "^1.3.0",
